# chatserver

./: CMakeLists.txt  README.md
include/: common.hpp
include/server/: chatserver.h  chatservice.h
include/server/database/: db.h
include/server/model/: friendmodel.h  groupmodel.h  offlinemessagemodel.h  usermodel.h
include/server/table/: group.h  groupuser.h  user.h
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/database/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
